@@ -66,6 +66,7 @@ public class JVMService extends AbstractService {
   protected static final Logger LOGGER = LoggerFactory.getLogger(JVMService.class);
   protected static final Pattern FILE_NUMBER_PATTERN = Pattern.compile("(\\d+).*");
   protected static final Collection<String> DEFAULT_JVM_SYSTEM_PROPERTIES = Arrays.asList(
+    "--enable-preview",
     "-Dfile.encoding=UTF-8",
     "-Dlog4j2.formatMsgNoLookups=true",
     "-DIReallyKnowWhatIAmDoingISwear=true",
